index.css
/* Copyright 2013 The Chromium Authors. All rights reserved.
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

html, body {
  padding: 0;
  margin: 0;
  width: 100%;
  height: 100%;
}

#rank-wrapper {
  margin-top: -73px;
  left: 0;
  right: 0;
  text-align: center;
  position: absolute;
  font-size: 0.64em;
  font-family: 'Open Sans', sans-serif;
  color: #aaa;
  visibility: hidden;
}

#rank-value {
  font-weight: 600;
  color: #666;
  display: block;
  margin-top: -4px;
  font-size: 1.2em;
}

.bounce {
  animation: bounce 1.1s 0.1s;
}

@keyframes bounce {
  0% { transform: scale(1.1); }
  55% { transform: scale(1.7); }
  65% { transform: scale(0.6); }
  80% { transform: scale(0.90); }
  100% { transform: scale(1) }
}

span.green {
  color: #00b900;
}

#messageBox {
  position: absolute;
  margin-top: 28px;
  margin-left: 90px;
  cursor: pointer;
  transition: 0.33s;
  filter: brightness(100%);
}
#messageBox:hover {
  filter: brightness(94%);
}

#messageBox .button-text {
  font-family: 'Open Sans', sans-serif;
  pointer-events: none;
  width: 100%;
  height: 86%;

  display: flex;
  align-items: center;
  justify-content: center;

  font-size: 0.8em;
  font-weight: bold;
  position: absolute;
  top: 0;
  left: 0;
  color: #222;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.icon {
  -webkit-user-select: none;
  user-select: none;
  display: inline-block;
}

.  {
  content: -webkit-image-set(url(assets/default_200_percent/200-error-offline.png));
  position: relative;
}

.hidden {
  display: none;
}


/* Offline page */

.offline .interstitial-wrapper {
  color: #2b2b2b;
  font-size: 1em;
  line-height: 1.55;
  margin: 0 auto;
  max-width: 600px;
  padding-top: 100px;
  width: 100%;
}

.offline .runner-container {
  height: 150px;
  max-width: 600px;
  overflow: hidden;
  position: absolute;
  top: 35px;
  width: 44px;
}

.offline .runner-canvas {
  height: 150px;
  max-width: 600px;
  opacity: 1;
  overflow: hidden;
  position: absolute;
  top: 0;
  z-index: 2;
}

.offline .controller {
  background: rgba(247, 247, 247, .1);
  height: 100vh;
  left: 0;
  position: absolute;
  top: 0;
  width: 100vw;
  z-index: 1;
}

#main-content {
  position: relative;
}

#offline-resources {
  display: none;
}

@media (max-width: 420px) {
  .suggested-left > #control-buttons, .suggested-right > #control-buttons {
    float: none;
  }
  .snackbar {
    left: 0;
    bottom: 0;
    width: 100%;
    border-radius: 0;
  }
}

@media (max-height: 350px) {
  h1 {
    margin: 0 0 15px;
  }
  .icon-offline {
    margin: 0 0 10px;
  }
  .interstitial-wrapper {
    margin-top: 5%;
  }
  .nav-wrapper {
    margin-top: 30px;
  }
}

@media (min-width: 600px) and (max-width: 736px) and (orientation: landscape) {
  .offline .interstitial-wrapper {
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width: 420px) and (max-width: 736px) and (min-height: 240px) and (max-height: 420px) and (orientation:landscape) {
  .interstitial-wrapper {
    margin-bottom: 100px;
  }
}

@media (min-height: 240px) and (orientation: landscape) {
  .offline .interstitial-wrapper {
    margin-bottom: 90px;
  }
  .icon-offline {
    margin-bottom: 20px;
  }
}

@media (max-height: 320px) and (orientation: landscape) {
  .icon-offline {
    margin-bottom: 0;
  }
  .offline .runner-container {
    top: 10px;
  }
}

@media (max-width: 240px) {
  .interstitial-wrapper {
    overflow: inherit;
    padding: 0 8px;
  }
}

.arcade-mode,
.arcade-mode .runner-container,
.arcade-mode .runner-canvas {
  image-rendering: pixelated;
  max-width: 100%;
  overflow: hidden;
}

.arcade-mode #buttons,
.arcade-mode #main-content {
  opacity: 0;
  overflow: hidden;
}

.arcade-mode .interstitial-wrapper {
  height: 100vh;
  max-width: 100%;
  overflow: hidden;
}

.arcade-mode .runner-container {
  left: 0;
  margin: auto;
  right: 0;
  transform-origin: top center;
  transition: transform 250ms cubic-bezier(0.4, 0, 1, 1) 400ms;
  z-index: 2;
}

